--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
     "jquery": "^3.6.0",
+    "ng2-charts": "^3.0.9",
     "polygon.io": "^2.1.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
